# Fulliautomatix

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan-package.yml  linux.yml  macos.yml  release.yml  requirements-conan-package.txt  windows.yml
CuraEngineOnlyFans/: OnlyFans.py  __init__.py  onlyfans_settings.def.json
dat/: commands.txt
include/plugin/: metadata.h  modify.h  process.h  settings.h
include/processor/: gcode.h  process.h
src/: main.cpp  test.cpp
templates/cura_plugin/: package.json.jinja  plugin.json.jinja
